--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
 publish = "book"
-command ="cargo install mdbook | mdbook build"
+command ="curl -L https://github.com/rust-lang/mdBook/releases/download/v0.3.3/mdbook-v0.3.3-x86_64-unknown-linux-gnu.tar.gz | tar xvz && ./mdbook build"
